--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BrandSnob - Premium Brand Deals</title>
-    <meta name="description" content="Discover the best deals from your favorite luxury brands" />
+    <title>Brandsnobs - Curated Brand Deals</title>
+    <meta name="description" content="Track deals from your favorite premium brands in one place. Join the community of selective shoppers." />
   </head>
   <body>
     <div id="root"></div>
