--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-    <title>Brandsnobs - Curated Brand Deals</title>
-    <meta name="description" content="Track deals from your favorite premium brands in one place. Join the community of selective shoppers." />
+    <title>BrandSnobs - You Like What You Like</title>
+    <meta name="description" content="You Like What You Like" />
 
     <!-- PWA -->
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#171717" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="Brandsnobs" />
+    <meta name="apple-mobile-web-app-title" content="BrandSnobs" />
 
     <!-- PWA Icons -->
     <link rel="apple-touch-icon" href="/icon-192.png" />
